<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiniEx</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="please_turn_on_gps">Please turn on location services. Otherwise you\'ll be logged out</string>
    <string name="title_activity_warning">Warning</string>
    <string name="btn_signout">Sign out</string>
    <string name="btn_ok">OK</string>
    <string name="order_detail_basic_info_title">Basic info</string>
    <string name="order_detail_phone_number">"Phone number "</string>
    <string name="order_detail_address">Address</string>
    <string name="order_detail_time">Time</string>
    <string name="order_detail_total">Total Amount</string>
    <string name="order_detail_fee_ship">Shipping Fee</string>
    <string name="order_detail_basic_note_title">Notes</string>
    <string name="order_detail_status">Status</string>
    <string name="str_no_info">No information</string>
    <string name="title_activity_maps">Maps</string>
    <string name="no_location_detected">Không tìm thấy vị trí</string>
    <string name="gcm_defaultSenderId">35345353</string>
    <string name="th_i_gian">Thời gian</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="a_ch">Địa chỉ</string>
    <string name="n_h_ng">Đơn Hàng</string>
    <string name="tr_ng_th_i">Trạng thái:</string>
    <string name="ang_ch">Đang chờ</string>
</resources>
