<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bottom_wrapper"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:background="#66ddff00"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">
        <!--What you want to show-->

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_yellow_radius_corner" />

        <Button
            android:id="@+id/hoanthanh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_turquoise_selector"
            android:text="Cập nhật"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/note_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_turquoise_selector"
            android:text="Ghi chú"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            card_view:cardBackgroundColor="#fbfbfb"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ln_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/txt_task_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/img_location"
                        android:text="@string/n_h_ng"
                        android:textAllCaps="true"
                        android:textSize="21dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="Nơi lấy:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/addr_lay_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/bg_selectable_textview"
                            android:text="" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="Nơi trả:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAddr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:text="@string/a_ch" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="SĐT Nơi nhận:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:text="Ko nhỏ nhắn đáng yêu nhưng có nhiều họ hangg trên đươnhf có dc đi ko Mẩu" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="SĐT Nơi trả:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtPhoneTra"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:text="@string/s_i_n_tho_i" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_task_time" />

                        <TextView
                            android:id="@+id/txtTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:text="@string/th_i_gian"
                            android:textStyle="bold|italic" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="Giá"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/prices_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/bg_selectable_textview"
                            android:text="0"
                            android:textColor="#ffcc0000"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="Phí ship:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fee_ship_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/bg_selectable_textview"
                            android:text="0"
                            android:textColor="#88cc0000"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="@string/tr_ng_th_i"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/trangthai_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/shape_blue_radius_conner"
                            android:padding="5dp"
                            android:text="@string/ang_ch"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="Ghi chú:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/note_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/bg_selectable_textview"
                            android:text=""
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary" />
                    </TableRow>
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_selectable_textview"
                            android:padding="10dp"
                            android:text="Khách Ghi chú:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/khach_note_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/bg_selectable_textview"
                            android:text=""
                            android:textColor="@color/colorPrimary" />
                    </TableRow>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</com.daimajia.swipe.SwipeLayout>